Fix direction-text alignment to be centered

--- a/app.css
+++ b/app.css
@@ -299,6 +299,7 @@ select {
 }
 
 .center-text {
+  text-align: center;
   display: flex;
   flex-direction: column;
   align-items: center;
